bug 59526 sr=waterson r=valeski

This bullet-proofs the code so the one thread does not exit twice.